--- a/app/index.html
+++ b/app/index.html
@@ -55,12 +55,8 @@
       (function() {
         var h = window.location.hash || '';
         if (h && h.indexOf('#/') === 0) {
-          var newPath = h.substring(1);
-          try {
-            window.history.replaceState(null, '', newPath);
-          } catch (e) {
-            window.location.href = newPath;
-          }
+          var newPath = h.substring(1) || '/';
+          window.location.replace(newPath);
         }
       })();
     </script>
